--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <p class="subtitle">
             You will X to complete all of the questions. There are Y questions. Answering a question wrong takes away Z seconds from your time, so answer wisely!
         </p>
-        <button class="button" id="button-begin" onclick="quiz()">Begin</button>
+        <button class="button d-block mb-3" id="button-begin" onclick="quiz()">Begin</button>
+        <a href="#" onclick='scoreBoard()'>View Scoreboard</a>
     </div>
     <main class="card p-1" id='question-card' style='display: none;'>
         <h2 class="question" id="question"></h2>
@@ -47,8 +48,14 @@
         <div class="text-success mx-1 hide" id='correct'>Correct!</div>
         <div class="text-danger mx-1 hide" id='incorrect'>Incorrect. -10 seconds.</div>
     </main>
-    <div class="card" id="scoreboard" style='display: none;'>
+    <div id="quiz-end-query">
 
+    </div>
+    <div class="card p-1" id="scoreboard" style='display: none;'>
+        <h1>Scoreboard</h1>
+        <div id="scoreboard-board">
+
+        </div>
     </div>
 </body>
 </html>
