post quiz questions

--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
         <div class="answer" id="answers"></div>
         <div class="timer mx-1" style='display: inline-block;' id="timer"></div>
         <div class="text-success mx-1 hide" id='correct'>Correct!</div>
-        <div class="text-danger mx-1 hide" id='incorrect'>Incorrect. -10 seconds.</div>
+        <div class="text-danger mx-1 hide" id='incorrect'>Incorrect. -Z seconds.</div>
     </main>
-    <div id="quiz-end-query">
-
+    <div id="quiz-end">
+        <h2>You've completed the quiz.</h2>
+        <p id="score-display"></p>
+        <p id='time-display'></p>
+        <p id='ranking'></p>
     </div>
     <div class="card p-1" id="scoreboard" style='display: none;'>
         <h1>Scoreboard</h1>
