post quiz question layout

--- a/index.html
+++ b/index.html
@@ -48,16 +48,35 @@
         <div class="text-success mx-1 hide" id='correct'>Correct!</div>
         <div class="text-danger mx-1 hide" id='incorrect'>Incorrect. -Z seconds.</div>
     </main>
-    <div id="quiz-end">
+    <div id="quiz-end" class=' p-1'>
         <h2>You've completed the quiz.</h2>
         <p id="score-display"></p>
         <p id='time-display'></p>
-        <p id='ranking'></p>
+        <p id='ranking-display'></p>
+        <p class='d-block'>Save your results:</p>
+        <div class="container m-0 p-0">
+            <div id="leaderboard-form" class='col-lg-3 col-md-4 col-sm-6 col-8 m-0 p-0'>
+                <div class="input-group mb-2">
+                    <input type="text" class="form-control" placeholder="First Name">
+                </div>
+                <div class="input-group mb-2">
+                    <input type="text" class="form-control" placeholder="Last Name (optional)">   
+                </div>         
+            </div>
+            <div class="col"></div>
+        </div>
+        <button class='d-block mb-3'>Save Results</button>
+        <a href="#" onclick='scoreBoard()'>I don't want to save my results, take me to the scoreboard.</a>
     </div>
     <div class="card p-1" id="scoreboard" style='display: none;'>
         <h1>Scoreboard</h1>
         <div id="scoreboard-board">
+            <div id="scoreboard-header">
+                Page: 
+            </div>
+            <div id="scoreboard-entries">
 
+            </div>
         </div>
     </div>
 </body>
