--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="text-success mx-1 hide" id='correct'>Correct!</div>
         <div class="text-danger mx-1 hide" id='incorrect'>Incorrect. -Z seconds.</div>
     </main>
-    <div id="quiz-end" class=' p-1'>
+    <div id="quiz-end" class=' p-1' style="display: none;">
         <h2>You've completed the quiz</h2>
         <p id="score-display"></p>
         <p id='time-display'></p>
@@ -79,6 +79,7 @@
             <div id="scoreboard-entries">
 
             </div>
+            <a href="#" onclick="quiz()"> Begin quiz.</a>
         </div>
     </div>
 </body>
